gccida/c1/splay_tree_insert
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/splay_tree_insert/src/splay-tree.c:810:12: error: expected expression
*( _OWORD *)&v6->left = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/splay_tree_insert/src/splay-tree.c:810:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v6->left = 0LL; 
   ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/splay_tree_insert/src/obj/splay-tree.o] Error 1
